# extism-sqlite-host-function

./: README.md  accounts.db  main.py  pyproject.toml
plugin/: Cargo.toml
plugin/src/: lib.rs
